--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: mvPot
 Type: Package
 Title: Multivariate Peaks-over-Threshold Modelling for Spatial Extreme Events
 Version: 0.1.1
-Date: 2016-06-23
+Date: 2016-07-11
 Authors@R: person("Raphael", "de Fondeville", email = "raphael.de-fondeville@epfl.ch",
   role = c("aut", "cre"))
 Description: Tools for high-dimensional peaks-over-threshold inference and simulation
-  of spatial processes such as the Brown--Resnick.
+  of spatial extremal processes.
 License: GPL-2
 Imports:
     MASS,
