--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: mvPot
 Type: Package
 Title: Multivariate Peaks-over-Threshold Modelling for Spatial Extreme Events
-Version: 0.1.3
-Date: 2017-08-24
-Authors@R: person("Raphael", "de Fondeville", email = "raphael.de-fondeville@epfl.ch",
-  role = c("aut", "cre"))
+Version: 0.1.4
+Date: 2018-03-22
+Authors@R: c(person(given="Raphael", family="de Fondeville", email = "raphael.de-fondeville@epfl.ch",  role = c("aut", "cre")),
+             person(given="Leo", family="Belzile", role = "aut", email = "belzilel@gmail.com"),
+             person(given="Emeric", family="Thibaud", role = "ctb"))
 Description: Tools for high-dimensional peaks-over-threshold inference and simulation
   of spatial extremal processes.
 License: GPL-2
