Removed censored argument (unused), added standardization. mvTQMC handles univariate case via pt for compatibility reasons. Fixes to documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(simulBrownResnick)
 export(simulPareto)
 export(spectralLikelihood)
 importFrom(stats,cov2cor)
+importFrom(stats,pt)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 useDynLib(mvPot,mvTProbCpp)
