--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: mvPot
 Type: Package
 Title: Multivariate Peaks-over-Threshold Modelling for Spatial Extreme Events
-Version: 0.1.5
-Date: 2020-01-09
+Version: 0.1.6
+Date: 2023-10-13
 Authors@R: c(person(given="Raphael", family="de Fondeville", email = "raphael.de-fondeville@epfl.ch",  role = c("aut", "cre")),
              person(given="Leo", family="Belzile", role = "aut", email = "belzilel@gmail.com", comment = c(ORCID = "0000-0002-9135-014X")),
-             person(given="Emeric", family="Thibaud", role = "ctb"))
-Description: Tools for high-dimensional peaks-over-threshold inference and simulation
+             person(given="Emeric", family="Thibaud", role = "ctb"))Description: Tools for high-dimensional peaks-over-threshold inference and simulation
   of spatial extremal processes. Key references include de Fondeville and Davison (2018) <doi:10.1093/biomet/asy026>, Thibaud and Opitz (2015) <doi:10.1093/biomet/asv045>, Wadsworth and Tawn <doi:10.1093/biomet/ast042>.
 License: GPL-2
 Imports:
@@ -14,6 +13,6 @@ Imports:
     evd,
     numbers,
     gmp
-RoxygenNote: 7.0.2
+RoxygenNote: 7.2.3
 Encoding: UTF-8
-URL: http://github.com/r-fndv/mvPot
+URL: https://github.com/r-fndv/mvPot
