--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.1.7
 Authors@R: c(person(given="Raphael", family="de Fondeville", role = "aut", comment = c(ORCID = "0000-0002-9439-6872")),
              person(given="Leo", family="Belzile", role = c("aut", "cre"), email = "belzilel@gmail.com", comment = c(ORCID = "0000-0002-9135-014X")),
              person(given="Emeric", family="Thibaud", role = "ctb", comment = c(ORCID = "0000-0002-1899-3990")))
-Description: Tools for high-dimensional peaks-over-threshold inference and simulation
-  of spatial extremal processes. Key references include de Fondeville and Davison (2018) <doi:10.1093/biomet/asy026>, Thibaud and Opitz (2015) <doi:10.1093/biomet/asv045>, Wadsworth and Tawn <doi:10.1093/biomet/ast042>.
+Description: Tools for high-dimensional peaks-over-threshold inference and simulation of Brown-Resnick and extremal Student spatial extremal processes. These include optimization routines based on censored likelihood and gradient scoring, and exact simulation algorithms for max-stable and multivariate Pareto distributions based on rejection sampling. Fast multivariate Gaussian and Student distribution functions using separation-of-variable algorithm with quasi Monte Carlo integration are also provided. Key references include de Fondeville and Davison (2018) <doi:10.1093/biomet/asy026>, Thibaud and Opitz (2015) <doi:10.1093/biomet/asv045>, Wadsworth and Tawn (2014) <doi:10.1093/biomet/ast042> and Genz and Bretz (2009) <doi:10.1007/978-3-642-01689-9>.
 License: GPL-2
 Imports:
     MASS,
